# Quake-2

./: .gitignore  CMakeLists.txt
baseq2/: config.cfg
client/: cl_input.c  vid.h
game/: CMakeLists.txt
ref_gl/: CMakeLists.txt  gl_rmain.c
ref_soft/: CMakeLists.txt
win32/: glw_imp.c  vid_dll.c  vid_menu.c
